--- a/ByPincode.ipynb
+++ b/ByPincode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
     "        msg = \"ALERT! Slot available!\\nName: \" + str(name) + \"\\nAddress : \" + str(address) + \"\\nPincode : \" + str(pin) + \"\\nVaccine : \" + str(vaccine) + \" : \" + str(fee) + \"\\nAge : \" + str(age) + \"+\" + \"\\nTotal Slots : \" + str(v_count)\n",
     "        msg = format(quote_plus(msg))\n",
     "        send_text = 'https://api.telegram.org/bot' + bot_token + '/sendMessage?chat_id=' + bot_chatID + '&text=' + msg\n",
-    "    #     print(send_text)\n",
+    "        print(send_text)\n",
     "        response = requests.get(send_text)\n",
     "        return response.json()\n",
     "    except:\n",
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,27 +81,28 @@
     "    i = 0\n",
     "    for pincode in pincodes:\n",
     "        for pin in pincode:\n",
-    "            sleep.sleep(1)\n",
+    "            sleep.sleep(0.5)\n",
     "            try:\n",
     "                today = datetime.now().date().strftime('%d-%m-%Y');\n",
     "                url = \"https://cdn-api.co-vin.in/api/v2/appointment/sessions/calendarByPin?pincode=\"+str(pin)+\"&date=\"+str(today)\n",
     "\n",
     "                headers = {'User-Agent': \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.93 Safari/537.36\"}\n",
     "                response = requests.get(url, headers=headers)\n",
-    "                print(response)\n",
-    "                print(hitCount)\n",
+    "#                 print(response)\n",
+    "#                 print(hitCount)\n",
     "                hitCount += 1\n",
     "                response = response.content.decode()\n",
     "\n",
     "                jsonData = json.loads(response)\n",
     "                jsonData = jsonData['centers']\n",
-    "\n",
+    "#                 pprint(jsonData)\n",
     "                for center in jsonData:\n",
     "                    centerName = center['name']\n",
     "                    address = center['address']\n",
     "                    pin = center['pincode']\n",
     "                    fee = center['fee_type']\n",
     "                    for sessions in center['sessions']:\n",
+    "#                         print(sessions)\n",
     "                        if (today == sessions['date']):\n",
     "                            if(sessions['available_capacity'] > 0):\n",
     "                                if center['center_id'] in entry_list:\n",
@@ -110,11 +111,13 @@
     "                                    print(\"Slot Available!\")\n",
     "                                    print(center['center_id'],centerName,address,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'],fee)\n",
     "                                    entry_list.append(center['center_id'])\n",
+    "                                    print(center['center_id'],centerName,address,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'],fee)\n",
     "                                    sendMsg(pinCity[i],centerName,address,pin,sessions['vaccine'],sessions['available_capacity'],sessions['min_age_limit'],fee)\n",
     "            except:\n",
     "                pass\n",
     "#                 print(sys.exc_info())\n",
-    "            i += 1"
+    "#         print(i)\n",
+    "        i += 1"
    ]
   },
   {
@@ -123,337 +126,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "<Response [200]>\n",
-      "0\n",
-      "<Response [200]>\n",
-      "1\n",
-      "<Response [200]>\n",
-      "2\n",
-      "<Response [200]>\n",
-      "3\n",
-      "<Response [401]>\n",
-      "4\n",
-      "<Response [401]>\n",
-      "5\n",
-      "<Response [200]>\n",
-      "6\n",
-      "<Response [200]>\n",
-      "7\n",
-      "<Response [200]>\n",
-      "8\n",
-      "<Response [401]>\n",
-      "9\n",
-      "<Response [200]>\n",
-      "10\n",
-      "<Response [200]>\n",
-      "11\n",
-      "<Response [200]>\n",
-      "12\n",
-      "<Response [200]>\n",
-      "13\n",
-      "<Response [401]>\n",
-      "14\n",
-      "<Response [200]>\n",
-      "15\n",
-      "<Response [401]>\n",
-      "16\n",
-      "<Response [401]>\n",
-      "17\n",
-      "<Response [401]>\n",
-      "18\n",
-      "<Response [401]>\n",
-      "19\n",
-      "<Response [401]>\n",
-      "20\n",
-      "<Response [401]>\n",
-      "21\n",
-      "<Response [401]>\n",
-      "22\n",
-      "<Response [401]>\n",
-      "23\n",
-      "<Response [200]>\n",
-      "24\n",
-      "<Response [401]>\n",
-      "25\n",
-      "<Response [200]>\n",
-      "26\n",
-      "<Response [401]>\n",
-      "27\n",
-      "<Response [200]>\n",
-      "28\n",
-      "<Response [401]>\n",
-      "29\n",
-      "<Response [401]>\n",
-      "30\n",
-      "<Response [401]>\n",
-      "31\n",
-      "<Response [401]>\n",
-      "32\n",
-      "<Response [401]>\n",
-      "33\n",
-      "<Response [401]>\n",
-      "34\n",
-      "<Response [401]>\n",
-      "35\n",
-      "<Response [401]>\n",
-      "36\n",
-      "<Response [200]>\n",
-      "37\n",
-      "<Response [200]>\n",
-      "38\n",
-      "<Response [200]>\n",
-      "39\n",
-      "<Response [200]>\n",
-      "40\n",
-      "<Response [200]>\n",
-      "41\n",
-      "<Response [200]>\n",
-      "42\n",
-      "<Response [200]>\n",
-      "43\n",
-      "<Response [200]>\n",
-      "44\n",
-      "<Response [401]>\n",
-      "45\n",
-      "<Response [200]>\n",
-      "46\n",
-      "<Response [200]>\n",
-      "47\n",
-      "<Response [200]>\n",
-      "48\n",
-      "<Response [200]>\n",
-      "49\n",
-      "<Response [200]>\n",
-      "50\n",
-      "<Response [401]>\n",
-      "51\n",
-      "<Response [401]>\n",
-      "52\n",
-      "<Response [200]>\n",
-      "53\n",
-      "<Response [200]>\n",
-      "54\n",
-      "<Response [200]>\n",
-      "55\n",
-      "<Response [200]>\n",
-      "56\n",
-      "<Response [200]>\n",
-      "57\n",
-      "<Response [200]>\n",
-      "58\n",
-      "<Response [401]>\n",
-      "59\n",
-      "<Response [200]>\n",
-      "60\n",
-      "<Response [200]>\n",
-      "61\n",
-      "<Response [200]>\n",
-      "62\n",
-      "<Response [200]>\n",
-      "63\n",
-      "<Response [200]>\n",
-      "64\n",
-      "<Response [200]>\n",
-      "65\n",
-      "<Response [200]>\n",
-      "66\n",
-      "<Response [200]>\n",
-      "67\n",
-      "<Response [200]>\n",
-      "68\n",
-      "<Response [200]>\n",
-      "69\n",
-      "<Response [200]>\n",
-      "70\n",
-      "<Response [200]>\n",
-      "71\n",
-      "<Response [200]>\n",
-      "72\n",
-      "<Response [200]>\n",
-      "73\n",
-      "<Response [401]>\n",
-      "74\n",
-      "<Response [401]>\n",
-      "75\n",
-      "<Response [200]>\n",
-      "76\n",
-      "<Response [200]>\n",
-      "77\n",
-      "<Response [200]>\n",
-      "78\n",
-      "<Response [200]>\n",
-      "79\n",
-      "<Response [200]>\n",
-      "80\n",
-      "<Response [200]>\n",
-      "81\n",
-      "<Response [200]>\n",
-      "82\n",
-      "<Response [200]>\n",
-      "83\n",
-      "<Response [200]>\n",
-      "84\n",
-      "<Response [200]>\n",
-      "85\n",
-      "<Response [200]>\n",
-      "86\n",
-      "<Response [200]>\n",
-      "87\n",
-      "<Response [200]>\n",
-      "88\n",
-      "<Response [200]>\n",
-      "89\n",
-      "<Response [200]>\n",
-      "90\n",
-      "loop : 1 Time : 17:20:38.100380\n",
-      "[]\n",
-      "91\n",
-      "0\n",
-      "<Response [200]>\n",
-      "0\n",
-      "<Response [200]>\n",
-      "1\n",
-      "<Response [200]>\n",
-      "2\n",
-      "<Response [401]>\n",
-      "3\n",
-      "<Response [200]>\n",
-      "4\n",
-      "<Response [401]>\n",
-      "5\n",
-      "<Response [401]>\n",
-      "6\n",
-      "<Response [401]>\n",
-      "7\n",
-      "<Response [200]>\n",
-      "8\n",
-      "<Response [401]>\n",
-      "9\n",
-      "<Response [200]>\n",
-      "10\n",
-      "<Response [200]>\n",
-      "11\n",
-      "<Response [200]>\n",
-      "12\n",
-      "<Response [200]>\n",
-      "13\n",
-      "<Response [401]>\n",
-      "14\n",
-      "<Response [200]>\n",
-      "15\n",
-      "<Response [401]>\n",
-      "16\n",
-      "<Response [401]>\n",
-      "17\n",
-      "<Response [401]>\n",
-      "18\n",
-      "<Response [401]>\n",
-      "19\n",
-      "<Response [200]>\n",
-      "20\n",
-      "<Response [401]>\n",
-      "21\n",
-      "<Response [401]>\n",
-      "22\n",
-      "<Response [200]>\n",
-      "23\n",
-      "<Response [401]>\n",
-      "24\n",
-      "<Response [200]>\n",
-      "25\n",
-      "<Response [200]>\n",
-      "26\n",
-      "<Response [200]>\n",
-      "27\n",
-      "<Response [200]>\n",
-      "28\n",
-      "<Response [200]>\n",
-      "29\n",
-      "<Response [401]>\n",
-      "30\n",
-      "<Response [401]>\n",
-      "31\n",
-      "<Response [401]>\n",
-      "32\n",
-      "<Response [401]>\n",
-      "33\n",
-      "<Response [401]>\n",
-      "34\n",
-      "<Response [401]>\n",
-      "35\n",
-      "<Response [401]>\n",
-      "36\n",
-      "<Response [200]>\n",
-      "37\n",
-      "<Response [200]>\n",
-      "38\n",
-      "<Response [200]>\n",
-      "39\n",
-      "<Response [200]>\n",
-      "40\n",
-      "<Response [200]>\n",
-      "41\n",
-      "<Response [200]>\n",
-      "42\n",
-      "<Response [200]>\n",
-      "43\n",
-      "<Response [200]>\n",
-      "44\n",
-      "<Response [200]>\n",
-      "45\n",
-      "<Response [200]>\n",
-      "46\n",
-      "<Response [200]>\n",
-      "47\n",
-      "<Response [200]>\n",
-      "48\n",
-      "<Response [200]>\n",
-      "49\n",
-      "<Response [200]>\n",
-      "50\n",
-      "<Response [200]>\n",
-      "51\n",
-      "<Response [200]>\n",
-      "52\n",
-      "<Response [200]>\n",
-      "53\n",
-      "<Response [200]>\n",
-      "54\n",
-      "<Response [200]>\n",
-      "55\n",
-      "<Response [401]>\n",
-      "56\n",
-      "<Response [200]>\n",
-      "57\n",
-      "<Response [200]>\n",
-      "58\n",
-      "<Response [200]>\n",
-      "59\n",
-      "<Response [200]>\n",
-      "60\n",
-      "<Response [401]>\n",
-      "61\n",
-      "<Response [200]>\n",
-      "62\n",
-      "<Response [200]>\n",
-      "63\n",
-      "<Response [200]>\n",
-      "64\n",
-      "<Response [200]>\n",
-      "65\n",
-      "<Response [200]>\n",
-      "66\n",
-      "<Response [200]>\n",
-      "67\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "done = False\n",
     "i = 1\n",
@@ -480,13 +153,6 @@
     "        done = True\n",
     "    print(hitCount)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
