--- a/VaccineAlert.ipynb
+++ b/VaccineAlert.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,8 @@
     "    for d_id in ids: \n",
     "        sleep.sleep(1)\n",
     "        try:\n",
-    "            today = datetime.now().date() + timedelta(1)\n",
+    "            today = datetime.now().date()\n",
+    "#             today = datetime.now().date() + timedelta(1)\n",
     "#             print(today)\n",
     "            today = today.strftime('%d-%m-%Y');\n",
     "            url = \"https://cdn-api.co-vin.in/api/v2/appointment/sessions/calendarByDistrict?district_id=\"+str(d_id)+\"&date=\"+str(today)\n",
@@ -162,11 +163,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "loop : 1 Time : 22:43:45.766455\n",
+      "[]\n",
+      "4\n",
+      "0\n",
+      "loop : 2 Time : 22:43:53.469702\n",
+      "[]\n",
+      "4\n",
+      "0\n",
+      "loop : 3 Time : 22:44:01.428023\n",
+      "[]\n",
+      "4\n",
+      "0\n",
+      "loop : 4 Time : 22:44:09.021326\n",
+      "[]\n",
+      "4\n",
+      "0\n",
+      "loop : 5 Time : 22:44:17.096233\n",
+      "[]\n",
+      "4\n",
+      "0\n",
+      "loop : 6 Time : 22:44:24.700222\n",
+      "[]\n",
+      "4\n",
+      "0\n",
+      "loop : 7 Time : 22:44:32.300810\n",
+      "[]\n",
+      "4\n",
+      "0\n",
+      "loop : 8 Time : 22:44:39.821893\n",
+      "[]\n",
+      "4\n",
+      "0\n",
+      "loop : 9 Time : 22:44:47.508109\n",
+      "[]\n",
+      "4\n",
+      "0\n",
+      "loop : 10 Time : 22:44:55.095758\n",
+      "[]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-2b9092fdbced>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[0mi\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mentry_list\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m         \u001b[0msleep\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m         \u001b[1;32mif\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m%\u001b[0m\u001b[1;36m120\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m             \u001b[1;31m#list cleared\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "done = False\n",
     "i = 1\n",
@@ -177,21 +235,21 @@
     "    print(hitCount)\n",
     "    now = datetime.now().time()\n",
     "    \n",
-    "    if(now > time(7,00) and now < time(23,00)):\n",
+    "#     if(now > time(7,00) and now < time(23,00)):\n",
     "        \n",
-    "        #By District\n",
-    "        checkSlotsByDistrict(state,districts)\n",
-    "    \n",
-    "        \n",
-    "        print(\"loop : \" + str(i) + \" Time : \" + str(now))\n",
-    "        i += 1\n",
-    "        print(entry_list)\n",
-    "        sleep.sleep(5)\n",
-    "        if(i%120 == 0):\n",
-    "            #list cleared\n",
-    "            entry_list = []\n",
-    "    else:\n",
-    "        done = True\n",
+    "    #By District\n",
+    "    checkSlotsByDistrict(state,districts)\n",
+    "\n",
+    "\n",
+    "    print(\"loop : \" + str(i) + \" Time : \" + str(now))\n",
+    "    i += 1\n",
+    "    print(entry_list)\n",
+    "    sleep.sleep(5)\n",
+    "    if(i%120 == 0):\n",
+    "        #list cleared\n",
+    "        entry_list = []\n",
+    "#     else:\n",
+    "#         done = True\n",
     "    print(hitCount)"
    ]
   },
